--- a/src/bin-client/CMakeLists.txt
+++ b/src/bin-client/CMakeLists.txt
@@ -1,9 +1,11 @@
 find_package(SDL2 CONFIG REQUIRED)
 file(GLOB files *.hpp *.cpp)
 add_executable(bin-client ${files})
-target_link_libraries(bin-client PRIVATE glm::glm )
-    target_link_libraries(bin-client
-        PRIVATE
-        $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
-        $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
-    )
+
+target_link_libraries(bin-client PRIVATE glm::glm lib-engine )
+
+target_link_libraries(bin-client
+    PRIVATE
+    $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
+    $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
+)
