--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(engine80)
 find_package(glm CONFIG REQUIRED)
 
 add_definitions(/std:c++latest)
+add_definitions(/DSPDLOG_COMPILED_LIB)
 
 
 include_directories(src)
