--- a/src/bin-client/CMakeLists.txt
+++ b/src/bin-client/CMakeLists.txt
@@ -9,3 +9,6 @@ target_link_libraries(bin-client
     $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
     $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
 )
+
+#find_package(spdlog CONFIG REQUIRED)
+#target_link_libraries(bin-client PRIVATE spdlog::spdlog)
