--- a/src/lib-engine/CMakeLists.txt
+++ b/src/lib-engine/CMakeLists.txt
@@ -5,4 +5,10 @@ target_link_libraries(lib-engine PRIVATE glm::glm)
 
 find_package(Vulkan) # https://cmake.org/cmake/help/latest/module/FindVulkan.html, CMake 3.21+
 find_package(VulkanMemoryAllocator CONFIG REQUIRED)
+
+
 target_link_libraries(lib-engine PRIVATE Vulkan::Vulkan GPUOpen::VulkanMemoryAllocator)
+
+   # Or use the header-only version
+#find_package(spdlog CONFIG REQUIRED)
+#target_link_libraries(lib-engine PRIVATE spdlog::spdlog_header_only)
