--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package(glm CONFIG REQUIRED)
 
 add_definitions(/std:c++latest)
 add_definitions(/DSPDLOG_COMPILED_LIB)
+add_definitions(/DNOMINMAX)
 
 include_directories(src)
 add_subdirectory(src/bin-client)
